brings me closer to an MVP for this project, responsive divs that add text based on who is currentPlayer and which box they click. but I can't seem to fix the jumping of the inline divs when the text gets added

--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 #board {
-    width: 750px;
+    width: 760px;
 }
 
 .piece {
